Web dev services page done

--- a/src/components/page/ContactSection.astro
+++ b/src/components/page/ContactSection.astro
@@ -26,7 +26,7 @@
           </div>
           <fieldset>
             <legend>¿Con qué te puedo ayudar?</legend>
-            <ul>
+            <ul role="list" class="grid">
               <li>
                 <input type="checkbox" id="website" name="website" value="Página Web">
                 <label for="website">Página Web</label>
