--- a/src/pages/servicios/desarrollador-de-paginas-web.astro
+++ b/src/pages/servicios/desarrollador-de-paginas-web.astro
@@ -1,15 +1,279 @@
 ---
 import DefaultLayout from "../../layouts/DefaultLayout.astro";
 import ServiceBanner from "../../components/page/PageBanner.astro";
+import ContactSection from "../../components/page/ContactSection.astro";
 ---
 
 <DefaultLayout>
-  <ServiceBanner title="Desarrollo web de sitios personales y corporativos" description="¿Estás buscando un desarrollador o servicio para crear tu sitio web? Pues, ¡estas en el lugar correcto!" class="yellow-bg" />
+  <div class="web-development">
+    <ServiceBanner title="Desarrollo web de sitios personales y corporativos" description="¿Estás buscando un desarrollador o servicio para crear tu sitio web? Pues, ¡estas en el lugar correcto!" class="green-bg" />
+    <section class="page-section">
+      <div class="container">
+        <div class="flow">
+          <h2>¿Tu web actual parece atrapada en el 2010? ¿O peor aún, dependes solo de las redes sociales y no tienes un "hogar" propio en internet?</h2>
+          <p>No tener una web profesional transmite desconfianza. En el mundo digital, si no te ven profesional, asumen que tu servicio tampoco lo es. Además, las plantillas genéricas lentas hacen que los usuarios se vayan antes de leer tu oferta.</p>
+        </div>
+      </div>
+    </section>
+    <section class="page-section | benefits">
+      <div class="container">
+        <div class="flow">
+          <h2>Beneficios (Lo que obtienes):</h2>
+          <ul role="list" class="grid">
+            <li>
+              <b>Visibilidad y credibilidad:</b> Un sitio web actúa como un escaparate digital. Hace que tu empresa sea accesible para cualquiera, en cualquier lugar y en cualquier momento. Esto no sólo aumenta su visibilidad, sino que también mejora tu credibilidad a los ojos de los clientes potenciales.
+            </li>
+            <li>
+              <b>Control y personalización:</b> A diferencia de depender de plataformas de terceros, tener tu propio sitio web le da un control total sobre su contenido, diseño y funcionalidad. Esto te permite adaptar tu presencia online para que se ajuste perfectamente a la identidad de tu marca y a tus objetivos empresariales.
+            </li>
+            <li>
+              <b>Autogestión Total:</b> Te entrego el control. Podrás editar textos e imágenes fácilmente sin depender de mí para cada cambio pequeño.
+            </li>
+            <li>
+              <b>100% Responsive:</b> Se verá perfecto en un teléfono, una tablet o una pantalla grande.
+            </li>
+            <li>
+              <b>Integraciones Clave:</b> Conecto tu web con WhatsApp, tus redes sociales y herramientas de Newsletter para que no pierdas ni un lead.
+            </li>
+            <li>
+              <b>Convertirás visitantes en clientes:</b> una web realizada para que de verdad atraiga y convierta a tus usuarios en ventas, es decir, ¡mayor rentabilidad!
+            </li>
+            <li>
+              <b>Aumentarás enormemente tu visibilidad:</b> mediante una web de diseño elegante y moderna, atraerás más miradas y oportunidades.
+            </li>
+            <li>
+              <b>Mejorarás tu imagen de marca:</b> muestra tus servicios de forma cercana, empatizando con tus clientes desde tu propia página web profesional.
+            </li>
+            <li>
+              <b>Clientes encantados: </b>con la información ofrecida en primera línea, sin distracciones. Tu web será tan auténtica como tu contenido.
+            </li>
+            <li>
+              <b>En definitiva, conseguirás más calidad de vida:</b> porque potenciarás tu proyecto alcanzando mayores metas, sin complicaciones ni preocupaciones y te dedicarás a lo que realmente te apasiona, tu trabajo o proyecto.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="page-section">
+      <div class="container">
+        <div class="flow">
+          <h2>Planes</h2>
+          <p>Planes ajustados para diferentes requerimientos</p>
+          <ul role="list" class="grid | plans-list">
+            <li>
+              <article class="flow | card-1">
+                <h3>Plan Base</h3>
+                <hr>
+                <h4>Qué trae este plan:</h4>
+                <ul>
+                  <li>
+                    Estilo <b>Landing Page</b>, es decir, una sola página con toda la información con hasta 5 secciones (Inicio, Sobre mí, Servicios, Testimonios, Contacto).
+                  </li>
+                  <li>
+                    Auto-administrable es decir, podrás modificar el contenido de tu web desde un sencillo panel de control.
+                  </li>
+                  <li>
+                    Se adaptará visualmente a dispositivos tanto PC como teléfonos móviles (responsive).
+                  </li>
+                  <li>
+                    Desarrollo en base al diseño aportado por el cliente o una plantilla.
+                  </li>
+                  <li>
+                    Configuración e instalación de la web en el servidor del cliente (Instalación, certificado SSL, CDN Cloudflare).
+                  </li>
+                  <li>
+                    Optimización SEO básica.
+                  </li>
+                  <li>
+                    Formulario de contacto.
+                  </li>
+                  <li>
+                    Mapa de ubicación.
+                  </li>
+                  <li>
+                    Botón de WhatsApp u otro chat.
+                  </li>
+                  <li>
+                    Integración con redes sociales.
+                  </li>
+                  <li>
+                    Cumplimiento con nivel AA de accesibilidad.
+                  </li>
+                </ul>
+                <a href="#contact" class="button">Ponerse en contacto</a>
+              </article>
+            </li>
+            <li>
+              <article class="flow | card-1 | recommended">
+                <h3>Plan Estándar</h3>
+                <span>Recomendado</span>
+                <hr>
+                <h4>Qué trae este plan:</h4>
+                <ul>
+                  <li>
+                    Sitio web corporativo de hasta 5 páginas.
+                  </li>
+                  <li>
+                    Auto-administrable es decir, podrás modificar el contenido de tu web desde un sencillo panel de control.
+                  </li>
+                  <li>
+                    Se adaptará visualmente a dispositivos tanto PC como teléfonos móviles (responsive).
+                  </li>
+                  <li>
+                    Desarrollo en base al diseño aportado por el cliente o una plantilla.
+                  </li>
+                  <li>
+                    Configuración e instalación de la web en el servidor del cliente (Instalación, certificado SSL, CDN Cloudflare).
+                  </li>
+                  <li>
+                    Formulario de contacto.
+                  </li>
+                  <li>
+                    Mapa de ubicación.
+                  </li>
+                  <li>
+                    Botón de WhatsApp u otro chat.
+                  </li>
+                  <li>
+                    Integración con redes sociales.
+                  </li>
+                  <li>
+                    Cumplimiento con nivel AA de accesibilidad.
+                  </li>
+                </ul>
+                <h4>SEO Inicial:</h4>
+                <ul>
+                  <li>Atributos meta en Títulos y Descripciones automáticos.</li>
+                  <li>Optimización de velocidad y rendimiento web.</li>
+                  <li>Creación y envío de sitemap XML a motores de búsqueda.</li>
+                </ul>
+                <a href="#contact" class="button">Ponerse en contacto</a>
+              </article>
+            </li>
+            <li>
+              <article class="flow | card-1">
+                <h3>Plan Premium + SEO Plus</h3>
+                <hr>
+                <h4>Qué trae este plan:</h4>
+                <ul>
+                  <li>
+                    Sitio web corporativo de hasta 5 páginas. Con opción de añadir una sección de blog o noticias.
+                  </li>
+                  <li>
+                    Auto-administrable es decir, podrás modificar el contenido de tu web desde un sencillo panel de control.
+                  </li>
+                  <li>
+                    Se adaptará visualmente a dispositivos tanto PC como teléfonos móviles (responsive).
+                  </li>
+                  <li>
+                    Desarrollo en base al diseño aportado por el cliente o una plantilla.
+                  </li>
+                  <li>
+                    Configuración e instalación de la web en el servidor del cliente (Instalación, certificado SSL, CDN Cloudflare).
+                  </li>
+                  <li>
+                    Formulario de contacto.
+                  </li>
+                  <li>
+                    Mapa de ubicación.
+                  </li>
+                  <li>
+                    Botón de WhatsApp u otro chat.
+                  </li>
+                  <li>
+                    Integración con redes sociales.
+                  </li>
+                  <li>
+                    Cumplimiento con nivel AA de accesibilidad.
+                  </li>
+                  <li>
+                    <h4>SEO Profesional:</h4>
+                    <ul>
+                      <li>Investigación de palabras clave para tu sector.</li>
+                      <li>Optimización avanzada on-page (etiquetas, meta descripciones, estructura de URL).</li>
+                      <li>Optimización de velocidad y rendimiento web.</li>
+                      <li>Configuración de Google Analytics y Google Search Console.</li>
+                      <li>Creación y envío de sitemap XML a motores de búsqueda.</li>
+                  </li>
+                </ul>
+                <a href="#contact" class="button">Ponerse en contacto</a>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="page-section | faq">
+      <div class="container">
+        <div class="flow">
+          <h2>Preguntas Frecuentes</h2>
+          <ul role="list" class="grid">
+            <li>
+              <details class="flow">
+                <summary>¿Cuánto tiempo llevaría la creación del sitio web?</summary>
+                <p>El tiempo promedio está de 10 a 25 días laborales/hábiles. Aunque si proporcionas más rápido la información necesaria, el tiempo pude reducirse. Otro factor que influye en el tiempo es la necesidad de funciones específicas que tenga el sitio web y la cantidad de cambios que se hagan en el proceso.</p>
+              </details>
+            </li>
+            <li>
+              <details class="flow">
+                <summary>¿Necesito entregar algo antes de empezar contigo?</summary>
+                <p>Necesitaré detalles sobre tu negocio, objetivos del sitio web, contenido (textos e imágenes), y cualquier preferencia de diseño que tengas.</p>
+                <p>Después de eso vemos si tienes logo o redes sociales.
+                Respecto a las imágenes es recomendable utilizar tus propias imágenes, las cuales te pediré que me las envíes en alta resolución. En caso contrario, puedo ayudarte a encontrar las imágenes perfectas a través de bancos de imágenes. También puedo agregar elementos gráficos como iconos y otros detalles decorativos para personalizar aún más tu sitio web.</p>
+              </details>
+            </li>
+            <li>
+              <details class="flow">
+                <summary>¿Necesito tener un dominio minegocio.com?</summary>
+                <p>Si, es necesario tener un dominio para tu sitio web. Lo mejor es que lo adquieras antes de comenzar el desarrollo del sitio web.</p>
+                <p>Si no lo tienes, puedo ayudarte a adquirirlo. Y así esté en una cuenta a tu nombre para que, si ya no quieras contar con mis servicios, esté en tu posesión.</p>
+                <p>Si no sabes cómo adquirirlo, puedo guiarte paso a paso.</p>
+                <p>Otra ventaja de que tú seas propietario de tu dominio es que puedes tener un correo corporativo asociado a él.</p>
+              </details>
+            </li>
+            <li>
+              <details class="flow">
+                <summary>¿Necesito hosting/alojamiento o algún servidor web?</summary>
+                <p>Si, toda página web requiere obligatoriamente un servicio de alojamiento web o hosting. No te preocupes, yo te asesoraré y me encargaré de la contratación del mejor hosting en tu nombre, garantizando que serás el propietario.</p>
+                <p>Si no quieres pasar por ese trabajo, ofrezco un servicio de mantenimento que incluye todo ese proceso más revisiones de seguridad, actualizaciones y cambios futuros que quieras hacerle a tu sitio web. Puedes revisar <a href="/mantenimiento-web/">AQUÍ</a> para saber más de ese servicio.</p>
+              </details>
+            </li>
+            <li>
+              <details class="flow">
+                <summary>¿Puedo actualizar el contenido de mi sitio web yo mismo? ¿Si no se cómo hacerlo?</summary>
+                <p>Sí, todos los sitios web que desarrollo son auto-administrables, lo que te permite actualizar textos e imágenes fácilmente.</p>
+                <p>No te preocupes, una vez terminado el sitio web, te daré instrucciones paso a paso para que puedas actualizarlo tú mismo mediante una video llamada.</p>
+              </details>
+            </li>
+            <li>
+              <details class="flow">
+                <summary>¿Si no quiero encargarme de la administración y solo quiero editar el contenido?</summary>
+                <p>Para eso ofrezco un servicio de Mantenimiento Web en el que me encargo de mantener al día todo el sitio web y su optimización. Para ese servicio visita <a href="/mantenimiento-web/">AQUÍ</a>.</p>
+              </details>
+            </li>
+            <li>
+              <details class="flow">
+                <summary>¿Mi sitio web será compatible con dispositivos móviles?</summary>
+                <p>Sí, todos los sitios web que desarrollo son 100% responsive y se adaptan a cualquier tamaño de pantalla.</p>
+              </details>
+            </li>
+            <li>
+              <details class="flow">
+                <summary>¿Ofreces servicios de mantenimiento después de lanzar el sitio web?</summary>
+                <p>Sí, ofrezco paquetes de mantenimiento para asegurar que tu sitio web esté siempre actualizado y funcionando correctamente. Para ese servicio visita <a href="/mantenimiento-web/">AQUÍ</a>.</p>
+              </details>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </div>
+  <ContactSection /> 
 </DefaultLayout>
 
 <style lang="scss">
   @use '../../assets/scss/abstracts/colors.scss' as *;
-  .yellow-bg {
+  .green-bg {
     background-color: hsl(115, 65%, 54%);
     color: var(--neutral-900);
   }
