--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -6,23 +6,27 @@
 
 /* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1240,20,1.333,5,2,&s=0.75,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
 
+/* @link https://utopia.fyi/type/calculator?c=360,18,1.2,1240,20,1.25,6,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+
 :root {
-  /* Step -2: 12.5px → 11.2556px */
-  --step--2: clamp(0.7035rem, 0.8083rem + -0.1353vw, 0.7813rem);
-  /* Step -1: 15px → 15.0038px */
-  --step--1: clamp(0.9375rem, 0.9374rem + 0.0004vw, 0.9377rem);
+  /* Step -2: 12.5px → 12.8px */
+  --step--2: clamp(0.7813rem, 0.7736rem + 0.0341vw, 0.8rem);
+  /* Step -1: 15px → 16px */
+  --step--1: clamp(0.9375rem, 0.9119rem + 0.1136vw, 1rem);
   /* Step 0: 18px → 20px */
-  --step-0: clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem);
-  /* Step 1: 21.6px → 26.66px */
-  --step-1: clamp(1.35rem, 1.24rem + 0.55vw, 1.6663rem);
-  /* Step 2: 25.92px → 35.5378px */
-  --step-2: clamp(1.62rem, 1.4109rem + 1.0454vw, 2.2211rem);
-  /* Step 3: 31.104px → 47.3719px */
-  --step-3: clamp(1.944rem, 1.5904rem + 1.7682vw, 2.9607rem);
-  /* Step 4: 37.3248px → 63.1467px */
-  --step-4: clamp(2.3328rem, 1.7715rem + 2.8067vw, 3.9467rem);
-  /* Step 5: 44.7898px → 84.1745px */
-  --step-5: clamp(2.7994rem, 1.9432rem + 4.281vw, 5.2609rem);
+  --step-0: clamp(1.125rem, 1.0739rem + 0.2273vw, 1.25rem);
+  /* Step 1: 21.6px → 25px */
+  --step-1: clamp(1.35rem, 1.2631rem + 0.3864vw, 1.5625rem);
+  /* Step 2: 25.92px → 31.25px */
+  --step-2: clamp(1.62rem, 1.4837rem + 0.6057vw, 1.9531rem);
+  /* Step 3: 31.104px → 39.0625px */
+  --step-3: clamp(1.944rem, 1.7405rem + 0.9044vw, 2.4414rem);
+  /* Step 4: 37.3248px → 48.8281px */
+  --step-4: clamp(2.3328rem, 2.0387rem + 1.3072vw, 3.0518rem);
+  /* Step 5: 44.7898px → 61.0352px */
+  --step-5: clamp(2.7994rem, 2.384rem + 1.8461vw, 3.8147rem);
+  /* Step 6: 53.7477px → 76.2939px */
+  --step-6: clamp(3.3592rem, 2.7828rem + 2.5621vw, 4.7684rem);
 }
 
 body {
@@ -73,23 +77,20 @@ body {
   }
 
   h1 {
-    font-size: 2.25rem;
-    line-height: 3.375rem;
+    font-size: var(--step-4);
+    line-height: 1.15;
+    // font-size: 2.25rem;
+    // line-height: 3.375rem;
 
-    @include breakpoint(medium) {
-      font-size: var(--step-4);
-      line-height: 1;
-    }
+    // @include breakpoint(medium) {
+
+    //   line-height: 1;
+    // }
   }
 
   h2 {
-    font-size: 1.875rem;
-    line-height: 2.8125rem;
-
-    @include breakpoint(medium) {
-      font-size: var(--step-3);
-      line-height: 1;
-    }
+    font-size: var(--step-3);
+    line-height: 1.15;
   }
 
   h3 {
